--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,4 +4,9 @@
   <% end %>
 </ul>
 
+
 <%= link_to 'add new',new_cocktail_path %>
+
+<%= cl_image_tag("THE_IMAGE_ID_FROM_LIBRARY", width: 400, height: 300, crop: :fill) %>
+
+
