--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,6 +7,4 @@
 
 <%= link_to 'add new',new_cocktail_path %>
 
-<%= cl_image_tag("THE_IMAGE_ID_FROM_LIBRARY", width: 400, height: 300, crop: :fill) %>
-
-
+<%= cl_image_tag("hw7fsyvrtlegkjthq5kv", width: 400, height: 300, crop: :fill) %>
