--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
@@ -11,3 +14,5 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
