--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,15 @@
-<ul>
+<div class='container' style="text-align: center">
+<%= link_to "Add cocktail", new_cocktail_path, class: "btn btn-ghost" %>
+<div class="cards">
   <% @cocktails.each do |cocktail| %>
-  <li><%= cocktail.name %></li>
-  <% if cocktail.photo.attached? %>
-    <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+  <%= cocktail.name %>
+  </div>
   <% end %>
-  <% end %>
-</ul>
+
+</div>
+
+</div>
 
 
-<%= link_to 'add new',new_cocktail_path %>
